--- a/css/xuedesign_201512.css
+++ b/css/xuedesign_201512.css
@@ -39,9 +39,6 @@ image{border:0}
 
 /* 2. 首頁  
 ===============================================================================================*/
-#bg { position: fixed; top: 0; left: 0; }
-.bgwidth { width: 100%; }
-.bgheight { height: 100%; }
 #wrap{
 	display:block;
 	width:1238px;
@@ -184,17 +181,14 @@ h1 a{
 	text-indent:-9999px;
 	background:url(../images/btn_nav.png) no-repeat;
 	margin:0 5px}
-#box_menu a.nav_01, #box_aside a.nav_01{ background-position: 0 0}
-#box_menu a.nav_01:hover, #box_aside a.nav_01:hover{ background-position: 0 -98px}
-
-#box_menu a.nav_02, #box_aside a.nav_02{ background-position: -116px 0}
-#box_menu a.nav_02:hover, #box_aside a.nav_02:hover{ background-position: -116px -98px}
-
-#box_menu a.nav_03, #box_aside a.nav_03{ background-position: -232px 0}
-#box_menu a.nav_03:hover, #box_aside a.nav_03:hover{ background-position: -232px -98px}
-
-#box_menu a.nav_04, #box_aside a.nav_04{ background-position: -348px 0}
-#box_menu a.nav_04:hover, #box_aside a.nav_04:hover{ background-position: -348px -98px}
+#box_menu a.nav_01{ background-position: 0 0}
+#box_menu a.nav_01:hover{ background-position: 0 -98px}
+#box_menu a.nav_02{ background-position: -116px 0}
+#box_menu a.nav_02:hover{ background-position: -116px -98px}
+#box_menu a.nav_03{ background-position: -232px 0}
+#box_menu a.nav_03:hover{ background-position: -232px -98px}
+#box_menu a.nav_04{ background-position: -348px 0}
+#box_menu a.nav_04:hover{ background-position: -348px -98px}
 
 /* 2.4 版權列 */					
 footer{
