--- a/css/xuepage_201512.css
+++ b/css/xuepage_201512.css
@@ -122,14 +122,16 @@ footer .txt_ad{
 	width:195px}
 #box_aside ul{
 	display:block;
-	margin-top:130px}
+	margin-top:130px;
+	list-style:none}
 #box_aside li a{
 	display: block;
 	width:116px;
 	height:98px;
 	text-indent:-9999px;
 	background:url(../images/btn_nav.png) no-repeat;
-	margin-bottom:10px}	
+	margin-bottom:10px;
+	list-style:none}	
 #box_aside a.nav_01{ background-position: 0 0}
 #box_aside a.nav_01:hover, #box_aside a.nav_01.navin{ background-position: 0 -98px}
 #box_aside a.nav_02{ background-position: -116px 0}
@@ -144,12 +146,11 @@ footer .txt_ad{
 	position:relative;
 	float:right;
 	width:1028px;
-	min-height:640px;
-	padding:35px 0 0 0}
+	padding-top:35px}
 #box_pageinfo{
 	display: block;
 	width:913px;
-	min-height:662px;
+	min-height:700px;
 	margin:0 auto;
 	background: url(../images/bg_pageinfo.png) repeat-y;
 	-webkit-border-radius: 15px 15px 0 0;
@@ -194,7 +195,7 @@ footer .txt_ad{
 #box_main{
 	display:block;
 	width:660px;
-	height:300px;
+	/*height:300px;*/
 	margin:30px 30px 0 215px;
 	padding:0}	
 .abgne_tab ul, .abgne_tab li {
@@ -204,7 +205,7 @@ footer .txt_ad{
 .abgne_tab {
 	clear: left;
 	width: 660px;
-	margin: 10px 0}
+	margin: 10px 0 0}
 .tabs { width: 100%; height: 149px}
 .tabs li a{
 	display:block;
@@ -228,7 +229,7 @@ footer .txt_ad{
 .tab_container .tab_content {
 	display: block;
 	position:relative;
-	padding: 0 30px}
+	padding: 15px 30px}
 .tab_container .tab_content h3{
 	font-size:1.125em;
 	line-height:25px;
